vlib/v/checker/tests/for_in_range_not_match_type.vv
fn main() {
	for i in 10 .. 10.5 {
		println(i)
	}
}
